language/move-lang/tests/move_check/typing/constraints_not_satisfied_struct_field.move
module M {
    struct CupC<T: copyable> {}
    resource struct R {}

    resource struct B {
        f: CupC<R>,
    }
}
